--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
           predicates:
             - Path=/api/users/**
 
+        - id: product-service
+          uri: http://localhost:8082
+          predicates:
+            - Path=/api/products/**
+
         - id: cart-service
           uri: lb://CART-SERVICE
           predicates:
