--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=product-service
+
+server.port=8082
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_product_db
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
