--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=api-gateway
+
+jwt.secret=your-secure-secret-key-with-minimum-length-of-256-bits-your-secure-secret-key-with-minimum-length-of-256-bits-your-secure-secret-key-with-minimum-length-of-256-bits
