--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -1,6 +1,17 @@
+server:
+  port: 8083
+
 spring:
   application:
-    name: product-service
+    name: inventory-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/ecommerce_inventory_db
+    username: root
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
@@ -21,6 +32,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-    fetch-registry: true
-    register-with-eureka: true
+
 
